Updated CSS and made HTML clearer

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 		This is my new webpage
 	</h1>
 
-	<p>
+	<p class="para">
 		I hope you like it
 	</p>
 
-	<p2>
+	<p2 class="para">
 		This is my second paragraph
 	</p2>
 
