--- a/index.html
+++ b/index.html
@@ -9,17 +9,24 @@
   <body>
     <script src="script.js"></script>
 
-	<h1>
-		This is my new webpage
-	</h1>
+	<h1> How to Build a Basic Website </h1>
 
-	<p class="para">
-		I hope you like it
-	</p>
+	<p> Websites are built using 3 languages: HTML, CSS and Javascript. These three languages are what created the internet to what it is now, and makes up one of the most popular languages in the world.</p>
 
-	<p2 class="para">
-		This is my second paragraph
-	</p2>
+	<h2> What do they do? </h2>
 
+	<p> HTML is the structure and content of the page, whereas CSS is the style of all pages and JS is the way the page can be interacted with. </p>
+
+	<h2> What else is there? </h2>
+
+	<ul>
+
+	<li> <a href='./Webpages/CSS.html'> Learn about CSS here </a> </li>
+
+	<li> <a href='./Webpages/HTML.html'> Or learn about HTML here </a> </li>
+
+	<li> <a href='./Webpages/Javascript.html'> Or dabble in some Javascript here </a> </li>
+
+	</ul>
   </body>
 </html>
