Added button colour changes on links

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<h1> How to Build a Basic Website </h1>
 
-	<p> Websites are built using 3 languages: HTML, CSS and Javascript. These three languages are what created the internet to what it is now, and makes up one of the most popular languages in the world.</p>
+	<p> Websites are built using <b>3 languages: HTML, CSS and Javascript</b>. These three languages are what created the internet to what it is now, and makes up one of the most popular languages in the world.</p>
 
 	<h2> What do they do? </h2>
 
