Updated to current code

--- a/index.html
+++ b/index.html
@@ -4,24 +4,28 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="../style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <script src="script.js"></script>
 
 	<ul>
-		<li><a href="./Webpages/HTML.html">HTML</a></li>
-		<li><a href="./Webpages/CSS.html">CSS</a></li>
-		<li><a href="./Webpages/Javascript.html">Javascript</a></li>
-	  </ul>
+		<li> <a href='../Webpages/CSS.html'> Learn about CSS here </a> </li>
+		<li> <a href='../Webpages/HTML.html'> Or learn about HTML here </a> </li>
+		<li> <a href='../Webpages/Javascript.html'> Or dabble in some Javascript here </a> </li>
+	</ul>
 
-	<h1 = "header"> How to Build a Basic Website </h1>
+	<h1> How to Build a Basic Website </h1>
 
 	<p> Websites are built using <b>3 languages: HTML, CSS and Javascript</b>. These three languages are what created the internet to what it is now, and makes up one of the most popular languages in the world.</p>
 
-	<h2 = "header2" > What do they do? </h2>
+	<h2> What do they do? </h2>
 
 	<p> HTML is the structure and content of the page, whereas CSS is the style of all pages and JS is the way the page can be interacted with. </p>
+
+	<h2> What else is there? </h2>
+
+	<p> Have a look at the other pages on the site to find out more! </p>
 
   </body>
 </html>
