--- a/Webpages/Javascript.html
+++ b/Webpages/Javascript.html
@@ -25,12 +25,12 @@
 			<input type = 'number' name = 'number1'>
 
 			<label> Number 2 </label>
-			<input type = 'number' name = 'number2'
+			<input type = 'number' name = 'number2'>
 
 			<button id='cmdMultiply'>Multiply!</button>
 		</form>
 
-		<h2 id='result'</h2>
+		<h2 id='result'></h2>
 
 	</div>
   </body>
