Update js, css, html nav bar

--- a/Webpages/HTML.html
+++ b/Webpages/HTML.html
@@ -9,7 +9,7 @@
   <body>
     <script src="../script.js"></script>
 
-	<ul>
+  <ul class="topnav">
 		<li> <a href='../index.html'> Go back to home </a> </li>
 		<li> <a href='../Webpages/CSS.html'> Learn about CSS here </a> </li>
 		<li> <a href='../Webpages/Javascript.html'> Or dabble in some Javascript here </a> </li>
