Made code more readable. Added noscript

--- a/Webpages/CSS.html
+++ b/Webpages/CSS.html
@@ -7,6 +7,7 @@
     <link href="../style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <noscript>You need to enable Javascript to run this app</noscript>
     <script src="../script.js"></script>
 
   <ul class="topnav">
