--- a/index.html
+++ b/index.html
@@ -7,25 +7,32 @@
     <link href="../style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+	<noscript>You need to enable Javascript to run this app</noscript>
     <script src="script.js"></script>
 
 	<ul class="topnav">
-		<li> <a href='../Webpages/CSS.html'> Learn about CSS here </a> </li>
-		<li> <a href='../Webpages/HTML.html'> Or learn about HTML here </a> </li>
-		<li> <a href='../Webpages/Javascript.html'> Or dabble in some Javascript here </a> </li>
+		<li> <a href='../Webpages/CSS.html'> 
+			Learn about CSS here 
+		  </a> 
+		</li>
+		<li> <a href='../Webpages/HTML.html'>
+			Or learn about HTML here 
+		  </a>
+		</li>
+		<li> <a href='../Webpages/Javascript.html'>
+			Or dabble in some Javascript here
+		  </a>
+		</li>
 	</ul>
 
-	<h1> How to Build a Basic Website </h1>
-
-	<p> Websites are built using <b>3 languages: HTML, CSS and Javascript</b>. These three languages are what created the internet to what it is now, and makes up one of the most popular languages in the world.</p>
-
-	<h2> What do they do? </h2>
-
-	<p> HTML is the structure and content of the page, whereas CSS is the style of all pages and JS is the way the page can be interacted with. </p>
-
-	<h2> What else is there? </h2>
-
-	<p> Have a look at the other pages on the site to find out more! </p>
+	<main>
+		<h1> How to Build a Basic Website </h1>
+		<p> Websites are built using <b>3 languages: HTML, CSS and Javascript</b>. These three languages are what created the internet to what it is now, and makes up one of the most popular languages in the world.</p>
+		<h2> What do they do? </h2>
+		<p> HTML is the structure and content of the page, whereas CSS is the style of all pages and JS is the way the page can be interacted with. </p>
+		<h2> What else is there? </h2>
+		<p> Have a look at the other pages on the site to find out more! </p>
+	</main>
 
   </body>
 </html>
