Added rainbow gradient background

--- a/Webpages/Javascript.html
+++ b/Webpages/Javascript.html
@@ -28,7 +28,7 @@
 			<label> Number 2 </label>
 			<input type = 'number' name = 'number2'>
 
-			<button id='cmdMultiply'>Multiply!</button>
+			<button type="submit" id='cmdMultiply'>Multiply!</button>
 		</form>
 
 		<h2 id='result'></h2>
