--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
 	<main>
 		<h1> How to Build a Basic Website </h1>
-		<p> Websites are built using <b>3 languages: HTML, CSS and Javascript</b>. These three languages are what created the internet to what it is now, and makes up one of the most popular languages in the world.</p>
-		<h2> What do they do? </h2>
-		<p> HTML is the structure and content of the page, whereas CSS is the style of all pages and JS is the way the page can be interacted with. </p>
-		<h2> What else is there? </h2>
-		<p> Have a look at the other pages on the site to find out more! </p>
+		<p class="indexparagraphs"> Websites are built using <b>3 languages: HTML, CSS and Javascript</b>. These three languages are what created the internet to what it is now, and makes up one of the most popular languages in the world.</p>
+		<h2 class="indexquestions"> What do they do? </h2>
+		<p class="indexparagraphs"> HTML is the structure and content of the page, whereas CSS is the style of all pages and JS is the way the page can be interacted with. </p>
+		<h2 class="indexquestions">  What else is there? </h2>
+		<p class="indexparagraphs"> Have a look at the other pages on the site to find out more! </p>
 	</main>
 
   </body>
