Fixing browser incompatability

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<noscript>You need to enable Javascript to run this app</noscript>
     <script src="script.js"></script>
 
+	<div class = "gradientBackground"></div>
+
 	<ul class="topnav">
 		<li> <a href='../Webpages/CSS.html'> 
 			Learn about CSS here 
