--- a/Webpages/CSS.html
+++ b/Webpages/CSS.html
@@ -16,5 +16,11 @@
 		<li> <a href='../Webpages/Javascript.html'> Or dabble in some Javascript here </a> </li>
 	</ul>
 
+  <div class="halEye"
+    style="background: -webkit-radial-gradient(white, red 20%, black);">
+  </div>
+
+
+
   </body>
 </html>
