removed excess }. added hal 9000 to css. rather than inline

--- a/Webpages/CSS.html
+++ b/Webpages/CSS.html
@@ -16,9 +16,7 @@
 		<li> <a href='../Webpages/Javascript.html'> Or dabble in some Javascript here </a> </li>
 	</ul>
 
-  <div class="halEye"
-    style="background: -webkit-radial-gradient(white, red 20%, black);">
-  </div>
+  <div class="halEye"></div>
 
 
 
