Added rainbow gradient to all pages

--- a/Webpages/CSS.html
+++ b/Webpages/CSS.html
@@ -10,6 +10,8 @@
     <noscript>You need to enable Javascript to run this app</noscript>
     <script src="../script.js"></script>
 
+    <div class="gradientBackground"></div>
+
   <ul class="topnav">
 		<li> <a href='../index.html'> Go back to home </a> </li>
 		<li><a href="../Webpages/HTML.html">Or learn about HTML here</a></li>
@@ -17,8 +19,6 @@
 	</ul>
 
   <div class="halEye"></div>
-
-
 
   </body>
 </html>
