--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<div class = "gradientBackground"></div>
 
-	<ul class="topnav">
+	<div class="topnav">
 		<li> <a href='../Webpages/CSS.html'> 
 			Learn about CSS here 
 		  </a> 
@@ -25,15 +25,15 @@
 			Or dabble in some Javascript here
 		  </a>
 		</li>
-	</ul>
+	</div>
 
 	<main>
 		<h1> How to Build a Basic Website </h1>
-		<p class="indexparagraphs"> Websites are built using <b>3 languages: HTML, CSS and Javascript</b>. These three languages are what created the internet to what it is now, and makes up one of the most popular languages in the world.</p>
+		<p class="indexparagraphs"> Websites are built using 3 languages: HTML, CSS and Javascript. These three languages are what created the internet to what it is now, and makes up one of the most popular languages in the world.</p>
 		<h2 class="indexquestions"> What do they do? </h2>
 		<p class="indexparagraphs"> HTML is the structure and content of the page, whereas CSS is the style of all pages and JS is the way the page can be interacted with. </p>
 		<h2 class="indexquestions">  What else is there? </h2>
-		<p class="indexparagraphs"> Have a look at the other pages on the site to find out more! </p>
+		<p class="indexparagraphs"> Have a look at the other pages on the site to find out more!</p>
 	</main>
 
   </body>
