Fixed issue where italics and bold text would start new lines

--- a/Webpages/CSS.html
+++ b/Webpages/CSS.html
@@ -12,13 +12,21 @@
 
     <div class = "gradientBackground"></div>
 
-  <ul class="topnav">
+  <div class="topnav">
 		<li> <a href='../index.html'> Go back to home </a> </li>
 		<li><a href="../Webpages/HTML.html">Or learn about HTML here</a></li>
 		<li> <a href='../Webpages/Javascript.html'> Or dabble in some Javascript here </a> </li>
-	</ul>
+	</div>
 
   <div class="halEye"></div>
+
+  <h2 class = "cssHeaders">What does CSS do then?</h2>
+
+  <p class = "cssParagraphs">CSS is what controls the look of the page and how everything on the HTML file is displayed. It is essential to making your page look like you want it.</p>
+
+  <h2 class = "cssHeaders"> How do I use it?</h2>
+
+  <p class = "cssParagraphs">It is really simple to get the hang of. Most things you will need to use are in plain enlish such as <i>text-size:</i> or <i>background:</i> and you can just list the things that you want to do, and can get a page looking half decent in no time. It is good practice to organise your CSS though into classes and even further into things such as text modifiers or positioning of bodies. </p> 
 
   </body>
 </html>
