--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 
 	<main>
 		<h1> How to Build a Basic Website </h1>
-		<p class="indexparagraphs"> Websites are built using 3 languages: HTML, CSS and Javascript. These three languages are what created the internet to what it is now, and makes up one of the most popular languages in the world.</p>
-		<h2 class="indexquestions"> What do they do? </h2>
-		<p class="indexparagraphs"> HTML is the structure and content of the page, whereas CSS is the style of all pages and JS is the way the page can be interacted with. </p>
-		<h2 class="indexquestions">  What else is there? </h2>
-		<p class="indexparagraphs"> Have a look at the other pages on the site to find out more!</p>
+		<p class="indexParagraphs"> Websites are built using <b>3 languages: HTML, CSS and Javascript</b>. These three languages are what created the internet to what it is now, and makes up one of the most popular languages in the world.</p>
+		<h2 class="indexHeaders"> What do they do? </h2>
+		<p class="indexParagraphs"> HTML is the structure and content of the page, whereas CSS is the style of all pages and JS is the the code that happens behind scenes to make programs in websites. </p>
+		<h2 class="indexHeaders">  What else is there? </h2>
+		<p class="indexParagraphs"> Have a look at the other pages on the site to find out more, as there is far too much to cover in one page!</p>
 	</main>
 
   </body>
