Removed old flex code

--- a/Webpages/Javascript.html
+++ b/Webpages/Javascript.html
@@ -12,18 +12,18 @@
 
 	<div class = "gradientBackground"></div>
 
-	<ul class="topnav">
+	<div class="topnav">
 		<li> <a href='../index.html'> Go back to home </a> </li>
 		<li><a href="../Webpages/HTML.html">Or learn about HTML here</a></li>
 		<li><a href="../Webpages/CSS.html">Learn about CSS here</a></li>
-	</ul>
+	</div>
 
 	<h1> How can you do this? </h1>
-	<p> The way to make this page be able to multiply the number is by using the javascript file. You can do a whole range of different things with javascript, from graphics to large online computers </p>
+	<p> The way to make this page be able to multiply the number is by using the Javascript file. You can do a whole range of different things with Javascript, from graphics to large online computers </p>
 
 	<div> 
 
-		<form name = 'maths'>
+		<form class = "multiplicationJS" name = 'maths'>
 			<label> Number 1 </label>
 			<input type = 'number' name = 'number1'>
 
