Adding HTML logo to HTML page

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 		</li>
 	</div>
 
+	<div class = "html5Img">
+		<img src="HTML5logo.png" alt="HTML5Logo.png"> </img>
+	</div>
+		
+
 	<main>
 		<h1> How to Build a Basic Website </h1>
 		<p class="indexParagraphs"> Websites are built using <b>3 languages: HTML, CSS and Javascript</b>. These three languages are what created the internet to what it is now, and makes up one of the most popular languages in the world.</p>
