--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 	<noscript>You need to enable Javascript to run this app</noscript>
-    <script src="script.js"></script>
+    <script src="script.js" defer ></script>
 
 	<div class = "gradientBackground"></div>
 
