Updated all navbars to ul

--- a/Webpages/CSS.html
+++ b/Webpages/CSS.html
@@ -12,11 +12,14 @@
 
     <div class = "gradientBackground"></div>
 
-  <div class="topnav">
-		<li> <a href='../index.html'> Go back to home </a> </li>
-		<li><a href="../Webpages/HTML.html">Or learn about HTML here</a></li>
-		<li> <a href='../Webpages/Javascript.html'> Or dabble in some Javascript here </a> </li>
-	</div>
+    <div class="topnav">
+      <ul>
+        <li> <a href='../index.html'>Go back home</a></li>
+        <li> <a href='../Webpages/HTML.html'>Or learn about HTML here</a></li>
+        <li> <a href='../Webpages/Javascript.html'>Or dabble in some Javascript here</a></li>
+      </ul>
+    </div>
+  
 
   <div class="halEye"></div>
 
