--- a/Webpages/HTML.html
+++ b/Webpages/HTML.html
@@ -13,11 +13,13 @@
     <div class = "gradientBackground"></div>
 
     <div class="topnav">
-      <li> <a href='../index.html'> Go back to home </a> </li>
-      <li> <a href='../Webpages/CSS.html'> Learn about CSS here </a> </li>
-      <li> <a href='../Webpages/Javascript.html'> Or dabble in some Javascript here </a> </li>
+      <ul>
+        <li> <a href='../Webpages/CSS.html'>Learn about CSS here</a></li>
+        <li> <a href='../index.html'>Go back home</a></li>
+        <li> <a href='../Webpages/Javascript.html'>Or dabble in some Javascript here</a></li>
+      </ul>
     </div>
-    
+  
     <main>
       <h2 class = "htmlHeaders"> What is the main purpose of HTML?</h2>
 
