--- a/Webpages/Javascript.html
+++ b/Webpages/Javascript.html
@@ -12,11 +12,15 @@
 
 	<div class = "gradientBackground"></div>
 
+
 	<div class="topnav">
-		<li> <a href='../index.html'> Go back to home </a> </li>
-		<li><a href="../Webpages/HTML.html">Or learn about HTML here</a></li>
-		<li><a href="../Webpages/CSS.html">Learn about CSS here</a></li>
+		<ul>
+			<li> <a href='../Webpages/CSS.html'>Learn about CSS here</a></li>
+			<li> <a href='../Webpages/HTML.html'>Or learn about HTML here</a></li>
+			<li> <a href='../index.html'>Go back home</a></li>
+		</ul>
 	</div>
+
 
 	<h1> How can you do this? </h1>
 
