--- a/index.html
+++ b/index.html
@@ -13,18 +13,11 @@
 	<div class = "gradientBackground"></div>
 
 	<div class="topnav">
-		<li> <a href='../Webpages/CSS.html'> 
-			Learn about CSS here 
-		  </a> 
-		</li>
-		<li> <a href='../Webpages/HTML.html'>
-			Or learn about HTML here 
-		  </a>
-		</li>
-		<li> <a href='../Webpages/Javascript.html'>
-			Or dabble in some Javascript here
-		  </a>
-		</li>
+		<ul>
+			<li> <a href='../Webpages/CSS.html'>Learn about CSS here</a></li>
+			<li> <a href='../Webpages/HTML.html'>Or learn about HTML here</a></li>
+			<li> <a href='../Webpages/Javascript.html'>Or dabble in some Javascript here</a></li>
+		</ul>
 	</div>
 
 	<div class = "html5Img">
