Partially fixed buttons on forms

--- a/Webpages/Javascript.html
+++ b/Webpages/Javascript.html
@@ -35,7 +35,7 @@
 			<label> Number 2 </label>
 			<input type = 'number' name = 'number2'>
 
-			<button type="submit" id='cmdMultiply'>Multiply!</button>
+			<button type="button" id='cmdMultiply'>Multiply!</button>
 		</form>
 
 		<h2 id='result'></h2>
@@ -46,6 +46,8 @@
 		<form class = 'JSParagraphs' name = 'converter'>
 			<label>Decimal Number</label>
 			<input type = 'number' name = 'Decimal'>
+
+			<button type="button" id='cmdDecimal'>Convert!</button>
 		</form>
 
 		<h2 id = 'result'></h2>
